MODSOURCE-752: updateParsedRecord & updateParsedRecords methods handled